# mac-upload

./: .dockerignore  .gitignore  Dockerfile  README.md  SOP.md  install.ps1  install.sh  setup-mac.sh  setup-windows.bat  update.bat  update.sh
.github/workflows/: sync-upstreams.yml
config/: openclaw-bailian.json.template
deploy/: README.md  SOP.md  deploy-openclaw.cmd  deploy-openclaw.ps1  deploy-openclaw.sh  docker-compose.yml  publish-wechat.sh
deploy/config/: login_check_config.json  openclaw-n1n.json.template
deploy/docker/: update-bundled-repos.sh
deploy/scripts/: cleanup_uploaded_videos.py
deploy/skills/auth/: SKILL.md  login_check_config.json
deploy/workspace/: AGENTS.md  SOUL.md  TOOLS.md
docker/: entrypoint.sh  init-config.py  sync-skills.sh
docs/: UPSTREAM_SYNC.md
openclaw_upload/: README.md
openclaw_upload/flash_longxia/: check_video_notifications.py  monitor_video.py  notify_utils.py  poll_and_notify.py  poll_task_template.py  poll_video_status.py  zhenlongxia_workflow.py
scripts/: sync-upstreams.ps1  sync-upstreams.sh
skills/flash-longxia/: cleanup_config.json
skills/longxia-bootstrap/: project_config.json
skills/video-cleanup/: SKILL.md
workspace/: HEARTBEAT.md  IDENTITY.md  MEMORY.md  USER.md
xiaolong-upload/: CLAUDE.md  DEPLOY.md  README.md  pyproject.toml  requirements.txt  upload.py  upload_all.py
xiaolong-upload/skills/auth/: SKILL.md
xiaolong-upload/skills/auth/scripts/: platform_login.py  python_runtime.py
xiaolong-upload/skills/flash-longxia/: SKILL.md
xiaolong-upload/skills/longxia-upload/: SKILL.md
(+14 files in other folders)
